overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,11 @@
     padding: 0;
     margin: 0;
     font-family: Roboto;
+    
 }
-canvas{
-    position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -1;
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
  
